force-app/main/default/objects/RTR_Route_Pick_Up_Point__c/RTR_Route_Pick_Up_Point__c.object-meta.xml
<CustomObject>
    <description>This object is used to store the Pick up points of the route path and its related payments.</description>
    <label>Route Pick Up Point</label>
    <nameField>
        <label>Pick Up Point Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Route Pick Up Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>