force-app/main/default/objects/RTR_Route_Pick_Up_Point__c/fields/Pin_Code__c.field-meta.xml
<CustomField>
    <fullName>Pin_Code__c</fullName>
    <label>Pin Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>