force-app/main/default/objects/RTR_Route_Pick_Up_Point__c/fields/RTR_Faculty_Fee__c.field-meta.xml
<CustomField>
    <fullName>RTR_Faculty_Fee__c</fullName>
    <label>Faculty Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>