force-app/main/default/objects/RTR_Route_Pick_Up_Point__c/fields/rtr_If_Short_Distance__c.field-meta.xml
<CustomField>
    <fullName>rtr_If_Short_Distance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>If Short Distance</label>
    <type>Checkbox</type>
</CustomField>