force-app/main/default/objects/RTR_Route_Pick_Up_Point__c/fields/RTR_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>RTR_Payment_Amount__c</fullName>
    <description>This field is used to store the pickup point amount fee which is payable by the student.</description>
    <label>Student Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>