force-app/main/default/objects/RTR_Route_Pick_Up_Point__c/fields/RTR_Route_Master__c.field-meta.xml
<CustomField>
    <fullName>RTR_Route_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route Master</label>
    <referenceTo>RTR_Route_Master__c</referenceTo>
    <relationshipLabel>Route Pick Up Points</relationshipLabel>
    <relationshipName>Route_Pick_Up_Points</relationshipName>
    <type>Lookup</type>
</CustomField>