force-app/main/default/objects/RTR_Route_Pick_Up_Point__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pin_Code__c</columns>
    <columns>RTR_Route_Master__c</columns>
    <columns>Amount__c</columns>
    <columns>rtr_If_Short_Distance__c</columns>
    <columns>RTR_Payment_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>